--- a/style.css
+++ b/style.css
@@ -16,7 +16,10 @@ padding: 20px;
   text-align: center;
   margin-bottom: 20px;
 }
-  
+  .grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    width: 100%;
   .card {
     width: 100%;
       border: 1px solid black;
