--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ padding: 20px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     width: 100%;
+    gap: 10px;
   .card {
     width: 100%;
       border: 1px solid black;
