--- a/style.css
+++ b/style.css
@@ -10,9 +10,11 @@ margin: 0;
 
 body {
 padding: 20px;
-  background: url('.background.jpg');
+  background: url('./background.jpg');
   background-size : cover;
   background-repeat: no-repeat;
+  height: 100vh;
+  overglow: hidden;
 }
   
 .header {
