--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ margin: 0;
 
 body {
 padding: 20px;
-  background: url('./background.jpg');
+  background: url('./b882fbdbd3abc34f1183eb7867277d2e.jpg');
   background-size : cover;
   background-repeat: no-repeat;
   height: 100vh;
