--- a/style.css
+++ b/style.css
@@ -11,10 +11,10 @@ margin: 0;
 body {
 padding: 20px;
   background: url('./b882fbdbd3abc34f1183eb7867277d2e.jpg');
-  background-size : cover;
+  background-size: cover;
   background-repeat: no-repeat;
   height: 100vh;
-  overglow: hidden;
+  overflow: hidden;
 }
   
 .header {
