--- a/style.css
+++ b/style.css
@@ -15,8 +15,11 @@ padding: 20px;
   background-repeat: no-repeat;
   height: 100vh;
   overflow: hidden;
+  color: white;
 }
-  
+  a {
+    color: depppink;
+  }
 .header {
   text-align: center;
   margin-bottom: 20px;
